2011-04-19  Ivan Maidanski  <ivmai@mail.ru>

	* misc.c (GC_parse_mem_size_arg): New function.
	* misc.c (GC_init): Use GC_parse_mem_size_arg().
	* pthread_stop_world.c (tkill): Declare for Android.

2011-04-19  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gc_priv.h (_GNU_SOURCE): Include features.h
	first (except for NaCl) and then define the macro to 1 if not yet.

2011-04-18  Ivan Maidanski  <ivmai@mail.ru> (really Ludovic Courtes)

	* tests/tests.am (TESTS, check_PROGRAMS): Add
	'initsecondarythread'.
	* tests/tests.am (initsecondarythread_SOURCES,
	initsecondarythread_LDADD): New variable.
	* Makefile.in: Regenerate.
	* configure: Ditto.

2011-04-18  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_store_debug_info_inner): Always define; add
	"const" to its string argument.
	* dbg_mlc.c (GC_store_debug_info): Call GC_store_debug_info_inner.
	* dbg_mlc.c (GC_debug_free): Set GC_have_errors in case of
	smashed or previously deallocated found.
	* dbg_mlc.c (GC_check_heap_block): Replace while loop with a for
	one.
	* reclaim.c (GC_reclaim_check): Ditto.
	* dbg_mlc.c (GC_check_heap_proc): Remove redundant cast to word.
	* os_dep.c (GC_get_stack_base): Don't initialize
	stackbase_main_self/ss_sp on Solaris if thr_main() is zero (thus
	calling GC_INIT() from a non-primordial thread is possible now).
	* reclaim.c (GC_add_leaked): Turn into an inline one.
	* reclaim.c (GC_reclaim_small_nonempty_block):
	Change report_if_found type from int/word to boolean.
	* include/private/gc_priv.h (GC_start_reclaim): Ditto.
	* include/private/gc_priv.h (set_mark_bit_from_hdr,
	clear_mark_bit_from_hdr): Place closing parenthesis properly;
	reformat the code.

2011-04-16  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_get_main_stack_base): Try to use
	pthread_attr_getstack first for Linux if THREADS.
	* doc/README.macros (USE_GET_STACKBASE_FOR_MAIN): Adjust text
	alignment.

2011-04-13  Ivan Maidanski  <ivmai@mail.ru>
