@@ -1,3 +1,14 @@
+2011-04-20  Ivan Maidanski  <ivmai@mail.ru>
+
+	* misc.c (GC_parse_mem_size_arg): Allow 'k', 'M', 'G' suffixes in
+	heap size specifier; return 0 if not a valid one.
+	* include/gc_cpp.h: Explicitly define inline one-argument delete
+	operator for Cygwin (as a workaround).
+	* include/gc_cpp.h: Reformat the code.
+	* tests/test_cpp.cc: Ditto.
+	* tests/test_cpp.cc (main): Suppress compiler warnings about
+	"assigned value is unused".
+
 2011-04-19  Ivan Maidanski  <ivmai@mail.ru>
 
 	* misc.c (GC_parse_mem_size_arg): New function.
